--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SoftNotesAndCanvas"
         tools:targetApi="31">
-
+        <activity
+            android:name=".NoteEditorActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AuthActivity"
             android:exported="true" />
-
+        <activity
+            android:name=".NoteEditorActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
